--- a/README
+++ b/README
@@ -1,3 +1,15 @@
 This is a Yahoo Query Language (YQL) Open Table for searching for Markets in Sao Paulo.
 
-The user can choose city area and day of the week and the query will return all the addresses that has Markets on it.
+----
+
+Busca por Feiras Livres em São Paulo, por dia da semana e zona da cidade.
+- As zonas possíveis são: CENTRAL, NORTE, SUL, LESTE e OESTE.
+- Os dias da semana possíveis são: DOMINGO, TERÇA, QUARTA, QUINTA, SEXTA, SÁBADO.
+- Deixe o dia da semana em branco para pesquisar em todos os dias de uma vez só.
+
+----
+
+Search for Free Markets in São Paulo (Brazil), by day of the week and city zone.
+- Possibles zones are: CENTRAL, NORTE, SUL, LESTE e OESTE.
+- Possible days of the week are: DOMINGO, TERÇA, QUARTA, QUINTA, SEXTA, SÁBADO.
+- Don't mention the day of the week for a full week search.
